@startuml
class Capture extends Move {
    - Piece capturedPiece
    - int captureAtX, captureAtY
    + Capture(int fromX, int fromY, Piece piece, Piece capturedPiece, int toX, int toY)
    + Piece getCapturedPiece()
    + int getCaptureAtX()
    + int getCaptureAtY()
}

class NormalMove extends Move {
    + NormalMove(int fromX, int fromY, Piece piece, int toX, int toY)
}

class InvalidMove extends Move {
    + InvalidMove(int fromX, int fromY, Piece piece, int toX, int toY)
}

Move <|-- Capture
Move <|-- NormalMove
Move <|-- InvalidMove
@enduml
